services/kl-integration/block-kl-integration-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "block-kl-integration-for-non-role-users"
spec:
  endpointSelector:
    matchLabels:
      {}		
  ingress:
    - fromCIDR:
        {}
      toPorts:
      - ports:
        - port: "8090"
          protocol: TCP
        - port: "30605"
          protocol: TCP
